Cabal-Version: 2.2
Name:          kontrakcja
Version:       1.0
Author:        Scrive AB
Maintainer:    Scrive AB
Copyright:     2010-2018
Stability:     Experimental
Category:      Web
Synopsis:      Ultimate signing solution
Description:   Sign documents online with the ultimate signing solution
License:       NONE
Build-type:    Simple

-- Note:
--
-- To allow warnings use command:
--
--    cabal configure --ghc-option=-Wwarn
--
-- Another useful command:
--
--    cabal configure --ghc-option=-fdefer-type-errors
--
--
-- Note about TemplateHaskell
--
-- Template Haskell is code that executes inside the compiler. It is
-- loaded from object *.o file that has to be compiled before.  This
-- object file must be a normal-vanilla one, not profiled. Here is
-- where trouble starts: since we want stack traces we want profiling
-- executables, but to build those template haskell normal ones need
-- to be loaded.
--
-- Cabal hacks around it by forcing vanilla compilation if it sees
-- TemplateHaskell in Extensions field. That is upside down, as
-- vanilla is needed for sources that *define* template Haskell
-- functions, although those source themselves do not use template
-- Haskell.
--
-- Whole mess results in double compilation and over twice the time
-- spent waiting. Possible way out is to:
-- - move modules that define template haskell function into separate
--   library, make everything else depend on it, enable TH there
-- - remove TH from extensions from everything else, add
--   LANGUAGE TemplateHaskell at the top of each file where it is used
-- - use TH only where it is truly needed
--

common common-stanza
  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                    , ConstraintKinds
                    , DataKinds
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DerivingStrategies
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , OverloadedLabels
                    , OverloadedStrings
                    , PatternGuards
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

Library kontrakcja-prelude

  Hs-Source-Dirs: backend/kontrakcja-prelude

  GHC-Options: -Werror -Wall -fno-warn-type-defaults
  GHC-Prof-Options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  Exposed-Modules:    Prelude
  Build-Depends:      base, cond, exceptions, extra
                    , optics, hpqtypes
                    , text, text-show
                    , fields-json
  Default-Language:   Haskell2010
  Default-Extensions: FlexibleInstances, RecordWildCards, TypeOperators
                    , OverloadedStrings

Library kontrakcja-appdir

  Hs-Source-Dirs: backend/appdir

  GHC-Options: -Werror -Wall
  GHC-Prof-Options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  Exposed-Modules:    AppDir
  Build-Depends:      base
                    , directory
                    , filepath
  Default-Language:   Haskell2010

Library
  import: common-stanza

  Hs-source-dirs: backend/cron/inc backend/cron/schema
                  backend/lib
                  backend/mailer/inc backend/mailer/schema backend/mailer/src
                  backend/messenger/inc backend/messenger/schema
                  backend/messenger/src
                  backend/migrate/inc
                  backend/misc/schema backend/misc/src
                  backend/server/schema backend/server/src
                  backend/flow/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  Exposed-modules: AccessControl.API
                 , AccessControl.Check
                 , AccessControl.JSON
                 , AccessControl.Migrations
                 , AccessControl.Model
                 , AccessControl.Tables
                 , AccessControl.Types
                 , Administration.AdministrationControl
                 , Administration.AdministrationView
                 , Amazon.Migrations
                 , Analytics.Include
                 , API.APIVersion
                 , API.Logging
                 , API.Monad.V1
                 , API.V2
                 , API.V2.Errors
                 , API.V2.Monad
                 , API.V2.MonadUtils
                 , API.V2.Parameters
                 , API.V2.User
                 , API.V2.Utils
                 , AppConf
                 , AppControl
                 , AppDBMigrations
                 , AppDBTables
                 , AppView
                 , Archive.Control
                 , Archive.View
                 , Attachment.API
                 , Attachment.AttachmentID
                 , Attachment.JSON
                 , Attachment.Model
                 , Attachment.Tables
                 , BrandedDomain.BrandedDomain
                 , BrandedDomain.BrandedDomainID
                 , BrandedDomain.Migrations
                 , BrandedDomain.Model
                 , BrandedDomain.Tables
                 , Branding.Adler32
                 , Branding.Control
                 , Branding.CSS
                 , Chargeable
                 , Chargeable.Migrations
                 , Chargeable.Model
                 , Chargeable.Tables
                 , Chargeable.Types
                 , Company.CompanyControl
                 , Company.JSON
                 , Company.Migrations
                 , Configuration
                 , Context
                 , Context.Internal
                 , Control.Monad.Trans.Control.Util
                 , Control.Monad.Trans.Instances
                 , Cookies
                 , CronConf
                 , CronEnv
                 , Cron.Migrations
                 , Cron.Model
                 , CronStats.Control
                 , CronStats.Model
                 , Cron.Tables
                 , Crypto
                 , Database.Redis.Cache
                 , Database.Redis.Configuration
                 , Database.Redis.Helpers
                 , Data.ByteString.RFC2397
                 , Data.ByteString.Utils
                 , DataRetentionPolicy
                 , DataRetentionPolicy.Guards
                 , DataRetentionPolicy.Internal
                 , DB
                 , DB.Derive
                 , DB.PostgreSQL
                 , DB.Query
                 , DB.RowCache
                 , DB.SQLFunction
                 , DB.SQLTrigger
                 , DB.TimeZoneName
                 , DB.Utils
                 , DB.XML
                 , Doc.AccessControl
                 , Doc.Action
                 , Doc.AddImageSpec
                 , Doc.Anchors
                 , Doc.API
                 , Doc.API.Callback.Execute
                 , Doc.API.Callback.Model
                 , Doc.API.Callback.Tables
                 , Doc.API.Callback.Types
                 , Doc.API.V1.Calls
                 , Doc.API.V1.DocumentFromJSON
                 , Doc.API.V1.DocumentToJSON
                 , Doc.API.V1.DocumentUpdateUtils
                 , Doc.API.V1.ListUtil
                 , Doc.API.V2
                 , Doc.API.V2.Calls
                 , Doc.API.V2.Calls.DocumentGetCalls
                 , Doc.API.V2.Calls.DocumentPostCalls
                 , Doc.API.V2.Calls.SignatoryCalls
                 , Doc.API.V2.Calls.SignatoryCallsUtils
                 , Doc.API.V2.DocumentAccess
                 , Doc.API.V2.DocumentUpdateUtils
                 , Doc.API.V2.Guards
                 , Doc.API.V2.JSON.AttachmentDetails
                 , Doc.API.V2.JSON.DisplayOptions
                 , Doc.API.V2.JSON.Document
                 , Doc.API.V2.JSON.DocumentViewer
                 , Doc.API.V2.JSON.Fields
                 , Doc.API.V2.JSON.List
                 , Doc.API.V2.JSON.Misc
                 , Doc.API.V2.JSON.SignatoryConsentQuestion
                 , Doc.API.V2.JSON.SigningData
                 , Doc.API.V2.JSON.Utils
                 , Doc.AutomaticReminder.Model
                 , Doc.AutomaticReminder.Tables
                 , Doc.CheckboxPlacementsUtils
                 , Doc.Class
                 , Doc.Conditions
                 , Doc.DigitalSignature
                 , Doc.DocAddImage
                 , Doc.DocControl
                 , Doc.DocInfo
                 , Doc.DocMails
                 , Doc.DocSeal
                 , Doc.DocStateCommon
                 , Doc.DocStateData
                 , Doc.DocStateQuery
                 , Doc.DocumentID
                 , Doc.DocumentMonad
                 , Doc.DocUtils
                 , Doc.DocView
                 , Doc.DocViewMail
                 , Doc.DocViewSMS
                 , Doc.EvidenceAttachments
                 , Doc.Extending.Consumer
                 , Doc.Extending.Migrations
                 , Doc.Extending.Model
                 , Doc.Extending.Tables
                 , Doc.Flow
                 , Doc.Functions
                 , Doc.Logging
                 , Doc.Migrations
                 , Doc.Model
                 , Doc.Model.Domain
                 , Doc.Model.Expressions
                 , Doc.Model.Filter
                 , Doc.Model.OrderBy
                 , Doc.Model.Query
                 , Doc.Model.Search
                 , Doc.Model.Update
                 , Doc.RadiobuttonPlacementsUtils
                 , Doc.Screenshot
                 , Doc.Sealing.Consumer
                 , Doc.Sealing.Model
                 , Doc.Sealing.Tables
                 , Doc.SealSpec
                 , Doc.SealStatus
                 , Doc.SignatoryConsentQuestionID
                 , Doc.SignatoryFieldID
                 , Doc.SignatoryFieldUtils
                 , Doc.SignatoryIdentification
                 , Doc.SignatoryLinkID
                 , Doc.SignatoryScreenshots
                 , Doc.SignatoryUtils
                 , Doc.Signing.Consumer
                 , Doc.Signing.Migrations
                 , Doc.Signing.Model
                 , Doc.Signing.Tables
                 , Doc.SMSPin.Migrations
                 , Doc.SMSPin.Model
                 , Doc.SMSPin.Tables
                 , Doc.Tables
                 , Doc.Tokens.Model
                 , Doc.Tokens.Tables
                 , Doc.Trigger
                 , Doc.Types.AuthorAttachment
                 , Doc.Types.Document
                 , Doc.Types.DocumentStatus
                 , Doc.Types.DocumentTag
                 , Doc.Types.HighlightedPage
                 , Doc.Types.MainFile
                 , Doc.Types.SignatoryAccessToken
                 , Doc.Types.SignatoryAttachment
                 , Doc.Types.SignatoryConsentQuestion
                 , Doc.Types.SignatoryField
                 , Doc.Types.SignatoryLink
                 , Doc.Types.SigningData
                 , Doc.Validation.Starting
                 , EID.Authentication.Migrations
                 , EID.Authentication.Model
                 , EID.Authentication.Tables
                 , EID.CGI.GRP.Config
                 , EID.CGI.GRP.Control
                 , EID.CGI.GRP.Transaction.Model
                 , EID.CGI.GRP.Transaction.Tables
                 , EID.CGI.GRP.Types
                 , EID.EIDService.Communication
                 , EID.EIDService.Conf
                 , EID.EIDService.Control
                 , EID.EIDService.Migrations
                 , EID.EIDService.Model
                 , EID.EIDService.Provider
                 , EID.EIDService.Provider.DKNemID
                 , EID.EIDService.Provider.FITupas
                 , EID.EIDService.Provider.NLIDIN
                 , EID.EIDService.Provider.NOBankID
                 , EID.EIDService.Provider.Onfido
                 , EID.EIDService.Provider.SEBankID
                 , EID.EIDService.Provider.Verimi
                 , EID.EIDService.Tables
                 , EID.EIDService.Types
                 , EID.Nets.Call
                 , EID.Nets.Config
                 , EID.Nets.Control
                 , EID.Nets.Migrations
                 , EID.Nets.Model
                 , EID.Nets.SignID
                 , EID.Nets.Tables
                 , EID.Nets.Types
                 , EID.Signature.Legacy
                 , EID.Signature.Migrations
                 , EID.Signature.Model
                 , EID.Signature.Tables
                 , EventStream
                 , EventStream.Class
                 , EventStream.Kinesis
                 , EvidenceLog.Model
                 , EvidenceLog.Tables
                 , EvidenceLog.View
                 , EvidencePackage.EvidenceLog
                 , EvidencePackage.EvidenceOfIntent
                 , EvidencePackage.EvidenceOfTime
                 , FeatureFlags.Migrations
                 , FeatureFlags.Model
                 , FeatureFlags.Tables
                 , File.Conditions
                 , File.File
                 , File.FileID
                 , File.Migrations
                 , File.Model
                 , File.Storage
                 , FileStorage
                 , FileStorage.Amazon
                 , FileStorage.Amazon.Config
                 , FileStorage.Amazon.S3Env
                 , FileStorage.Class
                 , FileStorage.RedisCache
                 , File.Tables
                 , FlashMessage
                 , Flow.ActionConsumers
                 , Flow.Aggregator
                 , Flow.Client
                 , Flow.DocumentChecker
                 , Flow.DocumentStarting
                 , Flow.Engine
                 , Flow.Error
                 , Flow.Guards
                 , Flow.HighTongue
                 , Flow.Id
                 , Flow.KontraHandler
                 , Flow.Machinize
                 , Flow.Message
                 , Flow.Message.Internal
                 , Flow.Migrations
                 , Flow.Model
                 , Flow.Model.InstanceSession
                 , Flow.Model.Types
                 , Flow.Model.Types.Internal
                 , Flow.Model.Types.FlowUserId
                 , Flow.Model.Types.UserIdType
                 , Flow.Names
                 , Flow.Names.Internal
                 , Flow.OrphanInstances
                 , Flow.Process
                 , Flow.Process.Internal
                 , Flow.Routes
                 , Flow.Routes.Api
                 , Flow.Routes.Pages
                 , Flow.Routes.Types
                 , Flow.Server
                 , Flow.Server.Api
                 , Flow.Server.Api.Instances
                 , Flow.Server.Api.Templates
                 , Flow.Server.Api.Templates.Start
                 , Flow.Server.AuthHandler
                 , Flow.Server.Cookies
                 , Flow.Server.Pages
                 , Flow.Server.Types
                 , Flow.Server.Utils
                 , Flow.Tables
                 , Flow.VariableCollector
                 , Folder.API
                 , Folder.FolderID
                 , Folder.Internal
                 , Folder.JSON
                 , Folder.Migrations
                 , Folder.Model
                 , Folder.Model.Query
                 , Folder.Model.Update
                 , Folder.Tables
                 , Folder.Types
                 , GuardTime
                 , GuardTime.Class
                 , Happstack.Fields
                 , Happstack.Server.Instances
                 , Happstack.Server.ReqHandler
                 , HostClock.Collector
                 , HostClock.Model
                 , HostClock.System
                 , HostClock.Tables
                 , HtmlToTxt
                 , HubSpot.Conf
                 , InputValidation
                 , InspectXML
                 , InspectXMLInstances
                 , InternalResponse
                 , IPAddress
                 , Kontra
                 , KontraError
                 , KontraLink
                 , KontraMonad
                 , LangRouting
                 , Log.Amazon
                 , Log.Configuration
                 , Log.Identifier
                 , Login
                 , LoginAuth.LoginAuthMethod
                 , Log.Migrations
                 , Log.Model
                 , Log.Tables
                 , Log.Utils
                 , MagicHash
                 , MailContext
                 , MailContext.Class
                 , MailingServerConf
                 , Mails.Events
                 , Mails.FromKontra.Migrations
                 , Mails.FromKontra.Tables
                 , Mails.KontraInfoForMail
                 , Mails.MailsData
                 , Mails.Migrations
                 , Mails.Model
                 , Mails.SendMail
                 , Mails.Tables
                 , Mails.Types
                 , MemCache
                 , MessengerServerConf
                 , MinutesTime
                 , Monitor.API
                 , Monitoring
                 , MonthlyInvoice.Config
                 , MonthlyInvoice.Send
                 , Network.SOAP.Call
                 , Network.SOAP.Transport.Curl
                 , Network.XMLCurl
                 , OAuth.Control
                 , OAuth.Model
                 , OAuth.Tables
                 , OAuth.Util
                 , OAuth.View
                 , PadApplication.API
                 , PadApplication.Types
                 , Partner.API
                 , Partner.JSON
                 , Partner.JSON.Internal
                 , Partner.Logging
                 , Partner.Migrations
                 , PasswordService.Conf
                 , PasswordService.Control
                 , PdfToolsLambda.Class
                 , PdfToolsLambda.Conf
                 , PdfToolsLambda.Conf.Internal
                 , PdfToolsLambda.Control
                 , PdfToolsLambda.Monad
                 , PdfToolsLambda.Spec
                 , Planhat
                 , Planhat.Communication
                 , Planhat.Config
                 , Planhat.Reporting
                 , Purging.Files
                 , Redirect
                 , Routing
                 , RoutingTable
                 , Salesforce.AuthorizationWorkflow
                 , Salesforce.Conf
                 , Salesforce.Control
                 , SealingMethod
                 , ServerUtils.ServerUtils
                 , Session.Constant
                 , Session.Cookies
                 , Session.Model
                 , Session.SessionID
                 , Session.Tables
                 , Session.Types
                 , SMS.Events
                 , SMS.FromKontra.Migrations
                 , SMS.FromKontra.Tables
                 , SMS.KontraInfoForSMS
                 , SMS.Migrations
                 , SMS.Model
                 , SMS.SMS
                 , SMS.Tables
                 , SMS.Types
                 , SSO.Conf
                 , SSO.Control
                 , SSO.Guards
                 , SSO.SAML
                 , StatsD.Communication
                 , StatsD.Config
                 , System.Random.CryptoRNG
                 , Tag
                 , Tag.Tables
                 , Templates
                 , Text.JSON.Convert
                 , Text.JSON.Orphans
                 , TextSearchQuery
                 , Text.XML.Content
                 , Text.XML.DirtyContent
                 , Text.XML.Parser
                 , Text.XML.Writer.Extended
                 , Text.XML.XMLDSig
                 , Theme.Control
                 , Theme.Migrations
                 , Theme.Model
                 , Theme.Tables
                 , Theme.ThemeID
                 , Theme.View
                 , ThirdPartyStats.Core
                 , ThirdPartyStats.Migrations
                 , ThirdPartyStats.Mixpanel
                 , ThirdPartyStats.Planhat
                 , ThirdPartyStats.Tables
                 , ThirdPartyStats.Utils
                 , User.Action
                 , User.API
                 , User.APILog.API
                 , User.APILog.Migrations
                 , User.APILog.Model
                 , User.APILog.Tables
                 , User.CallbackScheme.Migrations
                 , User.CallbackScheme.Model
                 , User.CallbackScheme.Tables
                 , User.Email
                 , User.EmailChangeRequest
                 , User.EmailChangeRequest.Tables
                 , UserGroup
                 , UserGroupAccounts.Migrations
                 , UserGroupAccounts.Model
                 , UserGroupAccounts.Tables
                 , UserGroupAccounts.UserGroupAccountsControl
                 , UserGroupAccounts.UserGroupAccountsView
                 , UserGroup.API
                 , UserGroup.DeletionRequest.Model
                 , UserGroup.DeletionRequest.Types
                 , UserGroup.FolderListCallsTransition
                 , UserGroup.FreeDocumentTokens.Model
                 , UserGroup.FreeDocumentTokens.Types
                 , UserGroup.Internal
                 , UserGroup.JSON
                 , UserGroup.Migrations
                 , UserGroup.Model
                 , UserGroup.Tables
                 , UserGroup.Types
                 , UserGroup.Types.PaymentPlan
                 , UserGroup.Types.Subscription
                 , User.History.Migrations
                 , User.History.Model
                 , User.History.Tables
                 , User.JSON
                 , User.Lang
                 , User.Migrations
                 , User.Model
                 , User.Model.Filter
                 , User.Model.OrderBy
                 , User.Model.Query
                 , User.Model.Update
                 , User.Password
                 , User.Password.Internal
                 , User.PasswordReminder
                 , User.PasswordReminder.Tables
                 , User.Tables
                 , User.TwoFactor
                 , User.Types.SignupMethod
                 , User.Types.Stats
                 , User.Types.User
                 , User.Types.User.Internal
                 , User.UserAccountRequest
                 , User.UserAccountRequest.Tables
                 , User.UserControl
                 , User.UserFeatures
                 , User.UserID
                 , User.UserView
                 , User.Utils
                 , Util.Actor
                 , Util.CSVUtil
                 , Util.HasSomeUserInfo
                 , Util.ImageUtil
                 , Util.MonadUtils
                 , Util.PDFUtil
                 , Util.QRCode
                 , Utils.Color
                 , Utils.Directory
                 , Utils.Either
                 , Utils.Enum
                 , Utils.Exception
                 , Utils.Font
                 , Utils.HTTP
                 , Util.SignatoryLinkUtils
                 , Utils.Image
                 , Utils.IO
                 , Utils.List
                 , Utils.Monad
                 , Utils.Monoid
                 , Util.SMSLinkShortening
                 , Utils.Network
                 , Utils.Prelude
                 , Utils.Read
                 , Utils.String
                 , Utils.TH
                 , Util.ZipUtil
                 , Version
                 , VersionTH

  Other-Modules: BrandedDomain.BrandedDomain.Internal,
                 MailContext.Internal
  Build-depends: base-noprelude
               , kontrakcja-prelude
               , kontrakcja-appdir
               , authentication
               , flow
               , AES
               , DRBG
               , Decimal
               , HStringTemplate
               , HTTP
               , QuickCheck
               , aeson
               , aeson-casing
               , amazonka
               , amazonka-core
               , amazonka-kinesis
               , amazonka-s3
               , attoparsec
               , base16-bytestring
               , base64-bytestring
               , binary
               , bytestring
               , case-insensitive
               , cond
               , conduit
               , consumers
               , containers
               , cookie
               , crypto-rng
               , cryptonite
               , cryptostore
               , curl
               , data-default
               , deepseq
               , digest
               , directory
               , Diff
               , either
               , ekg-core
               , ekg-statsd
               , exceptions
               , explicit-exception
               , extra
               , optics
               , fields-json
               , filepath
               , free
               , happstack-server
               , happstack-static-routing
               , hashable
               , hedis
               , hpqtypes
               , hpqtypes-extras
               , hsaml2
               , hxt
               , hxt-http
               , http-client
               , http-conduit
               , http-client-tls
               , http-media
               , http-types
               , iconv
               , invariant
               , json
               , JuicyPixels
               , kontrakcja-templates
               , lifted-async
               , lifted-base
               , lifted-threads
               , log-base
               , log-elasticsearch
               , log-postgres
               , memory
               , mixpanel
               , mmap
               , monad-control
               , monad-time
               , mtl
               , network
               , network-bsd
               , network-uri
               , one-time-password
               , pem
               , process
               , process-extras
               , psqueues
               , quickcheck-instances
               , random
               , regex-tdfa
               , resource-pool
               , sandi
               , scientific
               , scrypt
               , semigroups
               , servant
               , servant-auth
               , servant-checked-exceptions
               , servant-client
               , servant-client-core
               , servant-errors
               , servant-server
               , soap
               , split
               , spreadsheet
               , statistics
               , stm
               , tagsoup
               , template-haskell
               , temporary
               , text
               , text-icu
               , text-show
               , threads
               , time
               , transformers
               , transformers-base
               , unix
               , unjson
               , unordered-containers
               , utf8-string
               , uuid
               , vector
               , warp
               , wai
               , wai-log
               , x509
               , xml-conduit
               , xml-conduit-writer
               , xml-types
               , yaml
               , zip-archive

  Other-Extensions: TemplateHaskell

Executable kontrakcja-server
  import: common-stanza

  Hs-source-dirs: backend/server/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts -with-rtsopts=-T
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  Main-Is: KontrakcjaServerMain.hs

  Build-depends: base-noprelude
               , kontrakcja-prelude
               , kontrakcja-appdir
               , kontrakcja
               , bytestring
               , cmdargs
               , containers
               , crypto-rng
               , curl
               , directory
               , exceptions
               , filepath
               , flow
               , happstack-server
               , happstack-static-routing
               , hedis
               , hostname
               , hpqtypes
               , hpqtypes-extras
               , lifted-base
               , log-base
               , text
               , transformers-base
               , utf8-string

Executable cron
  import: common-stanza

  Hs-source-dirs: backend/cron/src
  GHC-Options: -Werror -Wall -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts -with-rtsopts=-T
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  Build-depends: base-noprelude
               , kontrakcja
               , kontrakcja-appdir
               , kontrakcja-prelude
               , bytestring
               , cmdargs
               , consumers
               , crypto-rng
               , data-default
               , exceptions
               , filepath
               , hedis
               , hostname
               , hpqtypes
               , hpqtypes-extras
               , http-client
               , http-client-tls
               , http-conduit
               , log-base
               , monad-control
               , mtl
               , text
               , transformers-base
               , unjson

  Main-is:       CronMain.hs

Executable kontrakcja-migrate
  import: common-stanza

  Hs-source-dirs: backend/migrate/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  Main-is: KontrakcjaMigrateMain.hs
  Other-Modules: AppDBConfig

  Build-depends: base-noprelude
               , kontrakcja
               , kontrakcja-appdir
               , kontrakcja-prelude
               , DRBG
               , aeson
               , base16-bytestring
               , base64-bytestring
               , binary
               , bytestring
               , cmdargs
               , cond
               , containers
               , crypto-api
               , crypto-rng
               , data-default
               , directory
               , exceptions
               , optics
               , fields-json
               , filepath
               , hpqtypes
               , hpqtypes-extras
               , invariant
               , json
               , lifted-base
               , log-base
               , log-elasticsearch
               , log-postgres
               , monad-control
               , monad-time
               , mtl
               , regex-tdfa
               , resource-pool
               , semigroups
               , stm
               , tagsoup
               , template-haskell
               , text
               , time
               , transformers-base
               , unjson
               , unordered-containers
               , utf8-string
               , yaml

  Other-Extensions: TemplateHaskell

Executable mailing-server
  import: common-stanza

  Hs-source-dirs: backend/mailer/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts -with-rtsopts=-T
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  Main-is: MailingServerMain.hs
  Other-Modules:
                 AddressUtils
                 Assembler
                 Handlers
                 HtmlToTxt
                 Mailer
                 MailGun
                 MailingServerConf
                 MailJet
                 Sender
                 SendGrid
                 SocketLabs


  Build-depends: base-noprelude
               , kontrakcja
               , kontrakcja-appdir
               , kontrakcja-prelude
               , authentication
               , AES
               , DRBG
               , HTTP
               , aeson
               , amazonka
               , amazonka-core
               , amazonka-s3
               , base16-bytestring
               , base64-bytestring
               , binary
               , bytestring
               , cmdargs
               , cond
               , conduit
               , consumers
               , containers
               , crypto-api
               , crypto-rng
               , cryptonite
               , data-default
               , hostname
               , hpqtypes-extras
               , deepseq
               , directory
               , ekg-core
               , ekg-statsd
               , exceptions
               , extra
               , optics
               , fields-json
               , filepath
               , happstack-server
               , happstack-static-routing
               , hashable
               , hedis
               , hpqtypes
               , invariant
               , json
               , lifted-async
               , lifted-base
               , log-base
               , log-elasticsearch
               , log-postgres
               , memory
               , monad-control
               , monad-time
               , mtl
               , network
               , network-bsd
               , process
               , process-extras
               , psqueues
               , punycode
               , resource-pool
               , scientific
               , semigroups
               , stm
               , tagsoup
               , template-haskell
               , text
               , time
               , transformers
               , transformers-base
               , unix
               , unjson
               , unordered-containers
               , utf8-string
               , vector
               , yaml

  Other-Extensions: TemplateHaskell

Executable messenger-server
  import: common-stanza

  Hs-source-dirs: backend/messenger/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts -with-rtsopts=-T
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  Main-is: MessengerServerMain.hs
  Other-Modules: Mblox
                 Messenger
                 MessengerServerConf
                 Handlers
                 Sender
                 TeliaCallGuide
                 GenericSE

  Build-depends: base-noprelude
               , kontrakcja
               , kontrakcja-appdir
               , kontrakcja-prelude
               , DRBG
               , aeson
               , base16-bytestring
               , base64-bytestring
               , binary
               , bytestring
               , cmdargs
               , cond
               , consumers
               , containers
               , crypto-rng
               , data-default
               , hpqtypes-extras
               , deepseq
               , directory
               , ekg-core
               , ekg-statsd
               , exceptions
               , extra
               , optics
               , fields-json
               , filepath
               , happstack-server
               , happstack-static-routing
               , hostname
               , hpqtypes
               , HTTP
               , iconv
               , invariant
               , json
               , lifted-base
               , log-base
               , log-elasticsearch
               , log-postgres
               , monad-control
               , monad-time
               , mtl
               , network
               , network-bsd
               , process
               , process-extras
               , regex-tdfa
               , resource-pool
               , semigroups
               , stm
               , tagsoup
               , template-haskell
               , text
               , time
               , transformers
               , transformers-base
               , unix
               , unjson
               , unordered-containers
               , utf8-string
               , yaml

  Other-Extensions: TemplateHaskell

Test-suite kontrakcja-test
  import: common-stanza

  Type:           exitcode-stdio-1.0
  Hs-source-dirs: backend/test/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  Main-is:       TestMain.hs
  Other-Modules: AccessControl.APITest
                 AccessControl.EIDTest
                 AccessControl.RoleTest
                 AccountInfoTest
                 AdministrationTest
                 ArchiveTest
                 Attachment.APITest
                 BrandedDomainTest
                 CSSGenerationTest
                 CSVUtilTest
                 ChargeableTest
                 CronMonthlyInvoiceTest
                 UserGroupAccountsTest
                 CompanyBrandingTest
                 CompanyControlTest
                 ConfigTests
                 CronStatsTest
                 OAuth
                 Doc.DBActions
                 Doc.AccessControlTest
                 Doc.API.V1.CallsTest
                 Doc.API.V1.ForwardsCompatibilityTest
                 Doc.API.V1.JSONTest
                 Doc.API.V2.AesonTestUtils
                 Doc.API.V2.APILogTest
                 Doc.API.V2.Calls.CallsTestUtils
                 Doc.API.V2.Calls.DocumentGetCallsTest
                 Doc.API.V2.Calls.DocumentPostCallsTest
                 Doc.API.V2.Calls.SetAuthenticationCallsTest
                 Doc.API.V2.Calls.SignatoryCallsTest
                 Doc.API.V2.CallsTest
                 Doc.API.V2.JSONTest
                 Doc.API.V2.Mock.MockDocInternal
                 Doc.API.V2.Mock.TestUtils
                 Doc.TestInvariants
                 DocControlTest
                 DocStateTest
                 Folder.FolderTest
                 DumpEvidenceTexts
                 EID.EIDService.CommunicationTest
                 ESignatureTest
                 EvidenceAttachmentsTest
                 EvidenceLogTest
                 FeatureFlagsTest
                 FileTest
                 FlashMessages
                 Flow.AuthenticationTest
                 Flow.AggregatorTest
                 Flow.DocumentCheckerTest
                 Flow.HighTongueTest
                 Flow.IntegrationTest
                 Flow.OrphanTestInstances
                 Flow.TestKontraHandler
                 Flow.TestUtil
                 Flow.VariableCollectorTest
                 FlowTests
                 Folder.APITest
                 UserGroup.APITest
                 UserGroup.UserGroupTest
                 Generators.DocumentGenerators
                 Generators.DocumentGeneratorsTest
                 Generators.OccurenceControl
                 Generators.OccurenceControlTest
                 GTWorkflowTest
                 HtmlTest
                 InputValidationTest
                 JSONUtilTest
                 LangTest
                 LocalizationTest
                 LogTest
                 LoginTest
                 MailModelTest
                 MailsTest
                 Monitor.APITest
                 NetsXMLTest
                 PadesTest
                 PadApplication.APITest
                 Partner.APITest
                 QRCodeTest
                 ReferenceScreenshotsTest
                 SMSLinkShorteningTest
                 SessionsTest
                 SignupTest
                 SSO.GuardsTest
                 SSO.SAMLTest
                 TestConf
                 TestCron
                 TestEnvSt
                 TestEnvSt.Internal
                 TestFileStorage
                 TestKontra
                 TestingUtil
                 TestingUtil.JSON
                 ThirdPartyStats
                 User.APITest
                 UserHistoryTest
                 UserPasswordTest
                 UserStateTest

  Build-depends: base-noprelude
               , kontrakcja-prelude
               , kontrakcja-appdir
               , kontrakcja
               , authentication
               , flow
               , Decimal
               , HStringTemplate
               , HUnit
               , HTTP
               , QuickCheck
               , aeson >= 1.4.4.0
               , aeson-diff
               , amazonka
               , base64-bytestring
               , binary
               , blaze-markup
               , bytestring
               , cond
               , consumers
               , containers
               , cookie
               , crypto-rng
               , cryptonite
               , cryptostore
               , data-default
               , directory
               , either
               , exceptions
               , extra
               , optics
               , fields-json
               , filepath
               , free
               , happstack-server
               , hedis
               , hpqtypes
               , hpqtypes-extras
               , hsaml2
               , http-client
               , http-client-tls
               , http-types
               , hxt
               , invariant
               , json
               , kontrakcja-templates
               , lifted-base
               , log-base
               , monad-control
               , monad-loops
               , mtl
               , network-uri
               , one-time-password
               , pretty-simple
               , quickcheck-instances
               , quickcheck-unicode
               , raw-strings-qq
               , regex-tdfa
               , sandi
               , scientific
               , scrypt
               , semigroups
               , servant-client
               , servant-server
               , split
               , stm
               , tagsoup
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , text
               , text-icu
               , threads
               , time
               , transformers
               , transformers-base
               , unjson
               , unordered-containers
               , utf8-string
               , vector
               , x509
               , xml-conduit
               , yaml

Executable config-checker
  import: common-stanza

  Hs-source-dirs: backend/config-checker/src,
                  backend/cron/inc,
                  backend/mailer/src,
                  backend/messenger/src

  GHC-options: -Werror -Wall

  Main-is: ConfigCheckerMain.hs
  Other-modules: CronConf
                 MailingServerConf
                 MessengerServerConf

  Build-Depends: base-noprelude
               , data-default
               , either
               , kontrakcja-appdir
               , kontrakcja
               , kontrakcja-prelude
               , lifted-base
               , text
               , unjson
               , filepath

Executable localization
  import: common-stanza

  Hs-source-dirs: localization/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  Main-Is: LocalizationMain.hs

  Build-depends: base-noprelude
               , kontrakcja
               , kontrakcja-prelude
               , kontrakcja-appdir
               , base16-bytestring
               , cond
               , data-default
               , directory
               , exceptions
               , extra
               , optics
               , filepath
               , happstack-server
               , hpqtypes
               , kontrakcja-templates
               , lifted-base
               , mtl
               , split
               , utf8-string
               , template-haskell
               , text
               , time
               , transformers

Executable routinglist
  import: common-stanza

  Hs-source-dirs: backend/routinglist/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  Main-Is: RoutinglistMain.hs

  Build-depends: aeson
               , base-noprelude
               , bytestring
               , extra
               , kontrakcja
               , kontrakcja-appdir
               , kontrakcja-prelude
               , happstack-server
               , happstack-static-routing
               , mtl
               , text
               , unordered-containers

Executable transifex
  Hs-source-dirs:   transifex/src
  Main-is:          TransifexMain.hs
  Other-Modules:    Transifex.Synch,
                    Transifex.Utils
  GHC-Options:      -Wall -Werror
  Build-Depends:    base,
                    fields-json,
                    json,
                    kontrakcja-appdir,
                    mtl,
                    old-locale,
                    old-time,
                    process
  Default-Language: Haskell2010

Executable detect_old_localizations
  Hs-source-dirs:   scripts/detect_old_localizations,
                    scripts/scripts-prelude
  Main-is:          DetectOldLocalizationsMain.hs
  Other-Modules:    ScriptsPrelude
  GHC-Options:      -Wall -Werror
  Build-Depends:    base,
                    kontrakcja-appdir,
                    containers,
                    directory,
                    language-javascript >= 0.6,
                    regex-tdfa

  Default-Language: Haskell2010

Executable detect_old_templates
  Hs-source-dirs:   scripts/detect_old_templates,
                    scripts/scripts-prelude
                    transifex/src/
  Main-is:          DetectOldTemplatesMain.hs
  Other-Modules:    ScriptsPrelude
                    Transifex.Synch
                    Transifex.Utils
  GHC-Options:      -Wall -Werror
  Build-Depends:    base,
                    kontrakcja-appdir,
                    containers,
                    directory,
                    fields-json,
                    haskell-src-exts,
                    HStringTemplate,
                    json,
                    kontrakcja-templates,
                    mtl,
                    process,
                    old-time,
                    old-locale
  Default-Language: Haskell2010

Executable sort_imports
  Hs-source-dirs:   scripts/sort_imports
  Main-is:          SortImportsMain.hs
  GHC-Options:      -Wall -Werror
  Build-Depends:    base,
                    attoparsec,
                    containers,
                    directory,
                    filepath,
                    kontrakcja-appdir,
                    text
  Default-Language: Haskell2010

Library authentication
  import: common-stanza

  Hs-Source-Dirs: backend/authentication/src

  GHC-Options: -Werror -Wall
  GHC-Prof-Options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  Exposed-Modules:    Auth.MagicHash
                    , Auth.Model
                    , Auth.OAuth
                    , Auth.Session
                    , Auth.Session.Constant
                    , Auth.Session.SessionID
                    , Auth.Utils
  Build-Depends:      base-noprelude
                    , kontrakcja-prelude
                    , bytestring
                    , cond
                    , crypto-rng
                    , exceptions
                    , happstack-server
                    , hpqtypes
                    , hpqtypes-extras
                    , http-api-data
                    , monad-time
                    , text
                    , text-show
                    , time
                    , unjson
                    , HTTP
